Fixed x spacing, added calculator colors

--- a/gradeCalculatorProject/gradeCalcStyle.css
+++ b/gradeCalculatorProject/gradeCalcStyle.css
@@ -1,15 +1,41 @@
+/* colors to try
+
+bda0bc
+a2708a
+F0EAD6
+824670
+d3fad6
+*/
+
+body{
+    background-color:#0c6291;
+    color: #a63446;
+}
+
+h1{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
 #calculatorBody{
+    background-color: #F0EAD6;
     text-align: center;
-    border: 5px solid black;
+    border: 1px solid black;
     width: 80vw;
     margin: 0 auto;
+    margin-top: 30px;
+    border-radius: 15px;
 }
 #calculateButton{
     margin: 30px 0;
+    border-radius: 10px;
 }
 
-#addGradeButton{
-    margin: 30px 0;
+#addCategoryButton{
+    border-radius: 10px;
+}
+
+.addGradeButtons{
+    margin-bottom: 10px;
 }
 
 .gradeInputSpacing{
@@ -18,12 +44,12 @@
 }
 
 .categoryNameBoxSpacing{
-    margin: 10px 0;
+    margin: 15px 0;
     text-align: center;
 }
 
 .categoryWeightBoxSpacing{
-    margin: 10px 0;
+    margin: 15px 0;
     text-align: center;
 }
 
@@ -43,10 +69,16 @@
     background-color: white;
     width: 15%;
     float: right;
+    margin: -1px;
 }
 
 .closeGradeBoxButton{
     background-color: white;
     width: 15%;
     margin: 10px 0 10px 0;
+}
+
+/* fixed with -1 margin, delete this */
+.toolbarArea{
+    padding-bottom: 2px;
 }
